# src/Api/swagger.json
@@ -239,6 +239,24 @@
             }
           }
         }
+      },
+      "get": {
+        "operationId": "GetApiUsersAll",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserDto"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/users/{id}/deactivate": {
